src/objects/lib__Settings__c.object
<CustomObject>
    <fields>
        <fullName>lib__Description__c</fullName>
        <inlineHelpText>Any description that gives more information about the settings and its usage.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lib__Env_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this setting should not be copied over from one environment to another.</inlineHelpText>
        <label>Env Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lib__Length__c</fullName>
        <defaultValue>255</defaultValue>
        <inlineHelpText>Indicates the maximum length of value this key supports. Defaults to 255 and max 25,000. You can specify higher value than 255 and if so value will be split into part of 255 bytes and will be stored as additional keys.</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lib__Type__c</fullName>
        <inlineHelpText>Data type of this Setting. Valid values are string, integer, decimal, date, datetime, json, boolean, list, map, set</inlineHelpText>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lib__Value__c</fullName>
        <inlineHelpText>The setting value can be stored in one or more value{n}__c fields depending on big that value is. The values are Value1__c, Value2__c etc.,</inlineHelpText>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to store all general purpose settings for the application. These settings should be accessed via lib.sf.settings.</description>
    <label>Settings</label>
</CustomObject>